--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "tailwind-merge": "^3.3.1",
+    "tailwind-variants": "^3.1.1",
     "tw-animate-css": "^1.4.0"
   },
   "devDependencies": {
