--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,19 @@
-NEXT_PUBLIC_SUPABASE_URL= "https://[projectId].supabase.co"
-NEXT_PUBLIC_SUPABASE_PUBLISHABLE_KEY= "Supabase Anon Key"
+# Database (Supabase Postgres)
 DATABASE_URL="postgresql://postgres.[projectId]:[password]@aws-1-us-east-1.pooler.supabase.com:6543/postgres"
+
+# Better Auth
+BETTER_AUTH_SECRET="your-secret-key-here" # Generate with: openssl rand -base64 32
+BETTER_AUTH_URL="http://localhost:3000" # Change to your production URL in production
+NEXT_PUBLIC_APP_URL="http://localhost:3000" # Change to your production URL in production
+
+# GitHub OAuth
+GITHUB_CLIENT_ID="your-github-client-id"
+GITHUB_CLIENT_SECRET="your-github-client-secret"
+
+# Google OAuth
+GOOGLE_CLIENT_ID="your-google-client-id"
+GOOGLE_CLIENT_SECRET="your-google-client-secret"
+
+# Email Provider (Optional - for email verification)
+# Example with Resend:
+# RESEND_API_KEY="re_..."
