feat(backend): add better-auth env vars with oauth instructions

--- a/.env.example
+++ b/.env.example
@@ -6,13 +6,17 @@ BETTER_AUTH_SECRET="your-secret-key-here" # Generate with: openssl rand -base64 
 BETTER_AUTH_URL="http://localhost:3000" # Change to your production URL in production
 NEXT_PUBLIC_APP_URL="http://localhost:3000" # Change to your production URL in production
 
-# GitHub OAuth
-GITHUB_CLIENT_ID="your-github-client-id"
-GITHUB_CLIENT_SECRET="your-github-client-secret"
+# GitHub OAuth (Optional - only include if you want GitHub login)
+# Get credentials from: https://github.com/settings/developers
+# Callback URL: http://localhost:3000/api/auth/callback/github (or your production URL)
+# GITHUB_CLIENT_ID="your-github-client-id"
+# GITHUB_CLIENT_SECRET="your-github-client-secret"
 
-# Google OAuth
-GOOGLE_CLIENT_ID="your-google-client-id"
-GOOGLE_CLIENT_SECRET="your-google-client-secret"
+# Google OAuth (Optional - only include if you want Google login)
+# Get credentials from: https://console.cloud.google.com/apis/credentials
+# Authorized redirect URI: http://localhost:3000/api/auth/callback/google (or your production URL)
+# GOOGLE_CLIENT_ID="your-google-client-id"
+# GOOGLE_CLIENT_SECRET="your-google-client-secret"
 
 # Email Provider (Optional - for email verification)
 # Example with Resend:
