feat(backend): simplify env file format

--- a/.env.example
+++ b/.env.example
@@ -1,23 +1,13 @@
-# Database (Supabase Postgres)
 DATABASE_URL="postgresql://postgres.[projectId]:[password]@aws-1-us-east-1.pooler.supabase.com:6543/postgres"
 
-# Better Auth
-BETTER_AUTH_SECRET="your-secret-key-here" # Generate with: openssl rand -base64 32
-BETTER_AUTH_URL="http://localhost:3000" # Change to your production URL in production
-NEXT_PUBLIC_APP_URL="http://localhost:3000" # Change to your production URL in production
+BETTER_AUTH_SECRET="generate-with-openssl-rand-base64-32"
+BETTER_AUTH_URL="http://localhost:3000"
+NEXT_PUBLIC_APP_URL="http://localhost:3000"
 
-# GitHub OAuth (Optional - only include if you want GitHub login)
-# Get credentials from: https://github.com/settings/developers
-# Callback URL: http://localhost:3000/api/auth/callback/github (or your production URL)
-# GITHUB_CLIENT_ID="your-github-client-id"
-# GITHUB_CLIENT_SECRET="your-github-client-secret"
+# GITHUB_CLIENT_ID=""
+# GITHUB_CLIENT_SECRET=""
 
-# Google OAuth (Optional - only include if you want Google login)
-# Get credentials from: https://console.cloud.google.com/apis/credentials
-# Authorized redirect URI: http://localhost:3000/api/auth/callback/google (or your production URL)
-# GOOGLE_CLIENT_ID="your-google-client-id"
-# GOOGLE_CLIENT_SECRET="your-google-client-secret"
+# GOOGLE_CLIENT_ID=""
+# GOOGLE_CLIENT_SECRET=""
 
-# Email Provider (Optional - for email verification)
-# Example with Resend:
-# RESEND_API_KEY="re_..."
+# RESEND_API_KEY=""
