--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@base-ui-components/react": "^1.0.0-beta.4",
     "@hookform/resolvers": "^5.2.2",
+    "@t3-oss/env-nextjs": "^0.13.8",
     "better-auth": "^1.3.31",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
