--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-dom": "19.1.0",
     "react-hook-form": "^7.65.0",
     "react-resizable-panels": "^3.0.6",
+    "resend": "^6.2.2",
     "tailwind-merge": "^3.3.1",
     "tailwind-variants": "^3.1.1",
     "tw-animate-css": "^1.4.0",
