feat(backend): add resend client and make api key required

--- a/.env.example
+++ b/.env.example
@@ -17,6 +17,6 @@ NEXT_PUBLIC_APP_URL="http://localhost:3000"
 # GOOGLE_CLIENT_ID=""
 # GOOGLE_CLIENT_SECRET=""
 
-# Email Provider (Optional)
+# Email Provider
 # https://resend.com/api-keys
-# RESEND_API_KEY=""
+RESEND_API_KEY=""
