--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "drizzle-orm": "^0.44.6",
     "lucide-react": "^0.545.0",
     "next": "15.5.5",
+    "next-themes": "^0.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.65.0",
