feat(frontend): update and add tambo provider to env example

--- a/.env.example
+++ b/.env.example
@@ -20,3 +20,7 @@ NEXT_PUBLIC_APP_URL="http://localhost:3000"
 # Email Provider
 # https://resend.com/api-keys
 RESEND_API_KEY=""
+
+# Tambo (LLM/AI Provider)
+# https://tambo.co/
+TAMBO_API_KEY=""
