--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@hookform/resolvers": "^5.2.2",
     "@neondatabase/serverless": "^1.0.2",
     "@t3-oss/env-nextjs": "^0.13.8",
+    "@tambo-ai/react": "^0.58.1",
     "better-auth": "^1.3.31",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
