--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "@t3-oss/env-nextjs": "^0.13.8",
     "@tambo-ai/react": "^0.58.1",
     "better-auth": "^1.3.31",
-    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.44.6",
@@ -33,6 +32,7 @@
     "react-dom": "19.1.0",
     "react-hook-form": "^7.65.0",
     "resend": "^6.2.2",
+    "streamdown": "^1.4.0",
     "tailwind-merge": "^3.3.1",
     "tailwind-variants": "^3.1.1",
     "tw-animate-css": "^1.4.0",
