--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-dom": "19.1.0",
     "react-hook-form": "^7.65.0",
     "resend": "^6.2.2",
+    "shiki": "^3.14.0",
     "streamdown": "^1.4.0",
     "tailwind-merge": "^3.3.1",
     "tailwind-variants": "^3.1.1",
