--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "@neondatabase/serverless": "^1.0.2",
     "@t3-oss/env-nextjs": "^0.13.8",
     "@tambo-ai/react": "^0.58.1",
+    "@tambo-ai/typescript-sdk": "^0.75.1",
     "better-auth": "^1.3.31",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.44.6",
+    "json-stringify-pretty-compact": "^4.0.0",
     "lucide-react": "^0.545.0",
     "next": "15.5.5",
     "next-themes": "^0.4.6",
