--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "@tambo-ai/typescript-sdk": "^0.75.1",
     "better-auth": "^1.3.31",
     "clsx": "^2.1.1",
+    "dompurify": "^3.3.0",
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.44.6",
+    "highlight.js": "^11.11.1",
     "json-stringify-pretty-compact": "^4.0.0",
     "lucide-react": "^0.545.0",
     "next": "15.5.5",
