refactor(backend): remove files and dependencies columns from project schema

--- a/.env.example
+++ b/.env.example
@@ -24,3 +24,8 @@ RESEND_API_KEY=""
 # Tambo (LLM/AI Provider)
 # https://tambo.co/
 NEXT_PUBLIC_TAMBO_API_KEY=""
+
+# Supabase Storage (Project Files)
+# https://supabase.com/dashboard/project/_/settings/api
+SUPABASE_URL="https://[project-id].supabase.co"
+SUPABASE_SERVICE_ROLE_KEY=""
