--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@codesandbox/sandpack-react": "^2.20.0",
     "@hookform/resolvers": "^5.2.2",
     "@neondatabase/serverless": "^1.0.2",
+    "@supabase/supabase-js": "^2.79.0",
     "@t3-oss/env-nextjs": "^0.13.8",
     "@tambo-ai/react": "^0.62.0",
     "@tambo-ai/typescript-sdk": "^0.76.0",
