--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "tailwind-merge": "^3.3.1",
     "tailwind-variants": "^3.1.1",
     "tw-animate-css": "^1.4.0",
-    "zod": "^4.1.12"
+    "zod": "3.25.76"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
